--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,7 +63,7 @@
   <!-- <img src="assets/images/AgroSense-Equipe.jpeg" alt="..." class="absolute inset-0 w-full h-full object-cover z-0"> -->
   
   <!-- Vídeo de fundo -->
-  <video [autoplay]="true" [muted]="true" [loop]="true" [playsInline]="true"
+  <video autoplay muted loop playsinline
     class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
     <source src="/video/Vard_Background.mp4" type="video/mp4" />
   </video>
