--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="flex min-h-screen flex-col bg-[#F1F2F4]">
   <div class="flex-grow">
-    <!-- HEADER -->
     <div class="fixed top-0 left-0 right-0 z-50 px-4">
       <div class="mx-auto max-w-2xl xl:max-w-4xl">
         <div class="py-8 xl:py-12">
@@ -57,34 +56,22 @@
         </button>
       </div>
     </div>
-    <!-- SECTION 1 -->
-<div class="relative overflow-hidden w-full h-screen">
-  <!-- Imagem estática opcional abaixo do vídeo (camada base, caso o vídeo falhe) -->
-  <!-- <img src="assets/images/AgroSense-Equipe.jpeg" alt="..." class="absolute inset-0 w-full h-full object-cover z-0"> -->
-  
-  <!-- Vídeo de fundo -->
-  <video autoplay muted loop playsinline
-    class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
-    <source src="/video/Vard_Background.mp4" type="video/mp4" />
-  </video>
+    <div class="relative overflow-hidden w-full h-screen">
+      <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
+        <source src="/video/Vard_Background.mp4" type="video/mp4" />
+      </video>
 
-  <!-- Gradiente escuro inferior -->
-  <div class="absolute bottom-0 z-10 left-0 w-full h-96 bg-gradient-to-b from-transparent to-[#000000] pointer-events-none">
-  </div>
+      <div
+        class="absolute bottom-0 z-10 left-0 w-full h-96 bg-gradient-to-b from-transparent to-[#000000] pointer-events-none">
+      </div>
 
-  <!-- Conteúdo central com imagem sobreposta -->
-  <div class="relative z-20 flex flex-col items-center justify-center h-full text-center px-4 gap-y-4">
-    <!-- Imagem com sombra e texto sobreposto -->
-    <div class="relative w-full max-w-[700px] aspect-[2/1] shadow-lg rounded overflow-hidden animate-slide-down">
-      <img src="assets/images/Vard_CardBG.png" alt="Equipe AgroSense"  class="w-full h-full object-cover" />
-      <!-- <div class="absolute bottom-0 w-full bg-[#ECC710] bg-opacity-60 text-white text-sm text-center px-3 py-2">
-        AgroSense - Inovação no Campo para o produtor
-      </div> -->
+      <div class="relative z-20 flex flex-col items-center justify-center h-full text-center px-4 gap-y-4">
+        <div class="relative w-full max-w-[700px] aspect-[2/1] shadow-lg rounded overflow-hidden animate-slide-down">
+          <img src="assets/images/Vard_CardBG.png" alt="Equipe AgroSense" class="w-full h-full object-cover" />
+          </div>
+      </div>
     </div>
-  </div>
-</div>
 
-    <!-- SECTION 2 -->
     <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
       <div class="py-8 xl:py-12">
         <div class="mx-auto grid grid-cols-1 xl:grid-cols-2 items-center justify-center gap-4">
@@ -111,8 +98,7 @@
                 <div *ngFor="let slide of slides"
                   class="group relative w-full h-full aspect-video bg-cover bg-center bg-no-repeat"
                   [ngStyle]="{ 'background-image': 'url(' + slide.backgroundImage + ')' }">
-                  <!-- esmaecer carossel de img -->
-                  <div class="absolute inset-0 bg-[#202124]/10"></div> 
+                  <div class="absolute inset-0 bg-[#202124]/10"></div>
                 </div>
               </div>
             </div>
@@ -172,7 +158,6 @@
         </div>
       </div>
     </div>
-    <!-- SECTION 3 -->
     <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
       <div class="py-8 xl:py-12">
         <div class="mx-auto grid grid-cols-1 xl:grid-cols-3 auto-rows-fr items-center justify-center gap-4">
@@ -184,7 +169,6 @@
         </div>
       </div>
     </div>
-    <!-- SECTION 4 -->
     <div class="bg-[radial-gradient(circle_at_center,#292929,#000000)]">
       <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
         <div class="py-8 xl:py-12">
@@ -253,8 +237,7 @@
               </div>
             </div>
             <div class="relative max-w-2xl w-full rounded-4xl overflow-hidden">
-              <video #bgVideo [autoplay]="true" [muted]="true" [loop]="true" [playsInline]="true"
-                class="aspect-video w-full">
+              <video #bgVideo autoplay muted loop playsinline class="aspect-video w-full">
                 <source src="/video/Vard_Group.mp4" type="video/mp4" />
               </video>
               <button type="button" class="absolute z-20 bottom-4 right-4 bg-[#202124] rounded-full p-4 cursor-pointer"
@@ -275,7 +258,6 @@
         </div>
       </div>
     </div>
-    <!-- SECTION 5 -->
     <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
       <div class="py-8 xl:py-12">
         <div class="mx-auto grid grid-cols-1 xl:grid-cols-2 items-center justify-center gap-4">
@@ -290,7 +272,9 @@
             <div class="text-center xl:text-start py-2 space-y-4">
               <p class="text-[#202124] text-2xl md:text-4xl font-semibold">Perguntas Frequentes</p>
               <p class="text-[#828388]">
-                Abaixo, respondemos às principais dúvidas sobre o funcionamento do V.A.R.D & Bicudo´s, incluindo o uso de IA, tipos de pragas identificadas, armadilhas utilizadas, benefícios para o produtor e detalhes da parceria com o Instituto Biológico.
+                Abaixo, respondemos às principais dúvidas sobre o funcionamento do V.A.R.D & Bicudo´s, incluindo o uso
+                de IA, tipos de pragas identificadas, armadilhas utilizadas, benefícios para o produtor e detalhes da
+                parceria com o Instituto Biológico.
               </p>
             </div>
           </div>
@@ -301,7 +285,8 @@
                 <div class="flex flex-row items-center justify-between gap-2">
                   <p class="text-[#232429] text-md font-semibold">{{ faq.title }}</p>
                   <svg [ngClass]="{ 'rotate-180': faq.isOpen }" class="size-4 text-[#828388] transition"
-                    xmlns="http://www.w3.org/2000/svg" width="45" height="27" fill="currentColor" viewBox="0 0 45 27">
+                    xmlns="http://www.w3.org/2000/svg" width="45" height="27" fill="currentColor"
+                    viewBox="0 0 45 27">
                     <path
                       d="M6.85 1.17L22.37 16.69L37.89 1.17C39.45 -0.39 41.97 -0.39 43.53 1.17C45.09 2.73 45.09 5.25 43.53 6.81L25.17 25.17C23.61 26.73 21.09 26.73 19.53 25.17L1.17 6.81C-0.39 5.25 -0.39 2.73 1.17 1.17C2.73 -0.35 5.29 -0.39 6.85 1.17Z" />
                   </svg>
@@ -318,7 +303,6 @@
         </div>
       </div>
     </div>
-    <!-- SECTION 6 -->
     <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
       <div class="py-8 xl:py-12">
         <div class="mx-auto grid grid-cols-1 xl:grid-cols-2 items-center justify-center gap-y-8">
@@ -333,7 +317,8 @@
             <div class="text-center xl:text-start py-2 space-y-4">
               <p class="text-[#202124] text-2xl md:text-4xl font-semibold">Integrações Simplificadas</p>
               <p class="text-[#828388]">
-                Através de nossa plataforma voce verá nossos parceiros, podendo conhecer um pouco mais sobre nossa historia juntamente a um panorama geral do projeto
+                Através de nossa plataforma voce verá nossos parceiros, podendo conhecer um pouco mais sobre nossa
+                historia juntamente a um panorama geral do projeto
               </p>
             </div>
           </div>
@@ -363,9 +348,7 @@
         </div>
       </div>
     </div>
-    <!-- SECTION 7 -->
-  </div>
-  <!-- FOOTER -->
+    </div>
   <div class="bg-[radial-gradient(circle_at_center,#292929,#000000)]">
     <div class="mx-auto max-w-2xl xl:max-w-7xl px-4">
       <div class="relative py-8 xl:py-12">
