--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="relative overflow-hidden w-full h-screen">
-      <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
+      <video muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
         <source src="/assets/videos/Vard_Background.mp4" type="video/mp4" />
       </video>
 
