--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,17 +63,10 @@
   <!-- <img src="assets/images/AgroSense-Equipe.jpeg" alt="..." class="absolute inset-0 w-full h-full object-cover z-0"> -->
   
   <!-- Vídeo de fundo -->
-  <video [autoplay]="true" [muted]="true" [loop]="true" [playsInline]="true"
-    class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
-    <source src="/video/Vard_Background.mp4" type="video/mp4" />
-  </video>
-=======
     <div class="relative overflow-hidden w-full h-screen">
       <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0 opacity-90">
-        <source src="/assets/videos/Vard_Background.mp4" type="video/mp4" />
+        <source src="/assets/videos/Vard_Background_mod.mp4" type="video/mp4" />
       </video>
->>>>>>> b5e48702233c3967f80bff4898929ce3ce1fc823
-
       <div
         class="absolute bottom-0 z-10 left-0 w-full h-96 bg-gradient-to-b from-transparent to-[#000000] pointer-events-none">
       </div>
@@ -250,13 +243,12 @@
               </div>
             </div>
             <div class="relative max-w-2xl w-full rounded-4xl overflow-hidden">
-<<<<<<< HEAD
+
               <video #bgVideo [autoplay]="true" [muted]="true" [loop]="true" [playsInline]="true"
                 class="aspect-video w-full">
-=======
               <video #bgVideo autoplay muted loop playsinline class="aspect-video w-full">
->>>>>>> b5e48702233c3967f80bff4898929ce3ce1fc823
-                <source src="/video/Vard_Group.mp4" type="video/mp4" />
+
+                <source src="/video/Vard_Group_mod.mp4" type="video/mp4" />
               </video>
               <button type="button" class="absolute z-20 bottom-4 right-4 bg-[#202124] rounded-full p-4 cursor-pointer"
                 (click)="toggleVideo(bgVideo)">
